--- a/booking-frontend/package.json
+++ b/booking-frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@radix-ui/react-checkbox": "^1.1.4",
+    "@radix-ui/react-dialog": "^1.1.11",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-select": "^2.1.6",
@@ -19,12 +20,16 @@
     "axios": "^1.8.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
+    "install": "^0.13.0",
     "lucide-react": "^0.475.0",
+    "npm": "^11.3.0",
     "react": "^19.0.0",
     "react-calendar": "^5.1.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
+    "react-places-autocomplete": "^7.3.0",
     "react-router-dom": "^7.1.5",
     "tailwind-merge": "^3.0.1",
     "tailwindcss": "^4.0.6",
