--- a/booking-frontend/package.json
+++ b/booking-frontend/package.json
@@ -29,6 +29,7 @@
     "react-calendar": "^5.1.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-places-autocomplete": "^7.3.0",
     "react-router-dom": "^7.1.5",
     "tailwind-merge": "^3.0.1",
