--- a/booking-frontend/package.json
+++ b/booking-frontend/package.json
@@ -30,6 +30,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-loader-spinner": "^6.1.6",
     "react-places-autocomplete": "^7.3.0",
     "react-router-dom": "^7.1.5",
     "tailwind-merge": "^3.0.1",
